--- a/ffe/app/src/main/AndroidManifest.xml
+++ b/ffe/app/src/main/AndroidManifest.xml
@@ -5,21 +5,20 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:targetSdkVersion="19" />
+        android:targetSdkVersion="33" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -68,6 +67,7 @@
 
         <receiver
             android:name=".FfeWidget"
+            android:exported="true"
             android:label="ffeCompet">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
